--- a/Index.html
+++ b/Index.html
@@ -392,7 +392,7 @@
 
         <section id="servicios" class="services">
             <div class="service-card">
-                <h3>🏴󠁧󠁢󠁳󠁣󠁴󠁿 Préstamos Comerciales</h3>
+                <h3> Préstamos Comerciales</h3>
                 <ul>
                     <li>Aprobación rápida en 24 horas</li>
                     <li>Tasas competitivas</li>
